@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.5 2013/09/05 19:07:07 wiz Exp $
-
-SHA1 (Test-Tester-0.109.tar.gz) = 29c47183ab06796faf88f9f2f3dbd9f0abb1283f
-RMD160 (Test-Tester-0.109.tar.gz) = 7183d9bd9f17a2f8ec25230a23642505831b7a0f
-Size (Test-Tester-0.109.tar.gz) = 16315 bytes
