@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2015,v 1.2120 2015/05/06 07:36:33 wiz Exp $
+$NetBSD: CHANGES-2015,v 1.2121 2015/05/06 07:37:45 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2015:
 
@@ -3368,3 +3368,4 @@ Changes to the packages collection and infrastructure in 2015:
 	Updated net/dnsmasq to 2.72 [mef 2015-05-06]
 	Updated devel/p5-Test-Output to 1.03nb3 [wiz 2015-05-06]
 	Updated www/p5-Test-WWW-Declare to 0.02nb6 [wiz 2015-05-06]
+	Removed devel/p5-Test-Tester successor devel/p5-Test-Simple [wiz 2015-05-06]
